--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h1 {
 
 input[type="button"] {
     font-size: 36px;
+    cursor: pointer;
     font-weight: 500;
     padding: 10px;
     background-color: #135267;
